# micro_server_crm

./: .tokeignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml
crm/: Cargo.toml  build.rs
crm/src/: client.rs  lib.rs  main.rs  server.rs
crm/src/abi/: crm.rs
crm/src/pb/: crm.rs
crm_metadata/: Cargo.toml  build.rs
crm_metadata/src/: config.rs  lib.rs  main.rs
crm_metadata/src/abi/: mod.rs
crm_metadata/src/pb/: metadata.rs  mod.rs
crm_send/: Cargo.toml  build.rs
crm_send/src/: config.rs  lib.rs  main.rs
crm_send/src/abi/: email.rs  in_app.rs  mod.rs  sms.rs
crm_send/src/pb/: mod.rs  notification.rs
protos/: crm.proto
protos/metadata/: messages.proto
protos/notification/: messages.proto  rpc.proto
protos/user_stats/: messages.proto  rpc.proto
user_stat/: Cargo.toml  build.rs  user_stat.yml
user_stat/examples/: gen.rs
user_stat/migrations/: 20241109041802_init.up.sql
user_stat/src/: config.rs  lib.rs  main.rs
user_stat/src/abi/: mod.rs
user_stat/src/pb/: mod.rs  user_stats.rs
user_stat/src/tests/: server.rs
