[workspace]
members = ["crm"]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0.93"
prost = "0.13.3"
prost-build = "0.13.3"
prost-types = "0.13.3"
tonic = { version = "0.12.3" , features = ["zstd","tls"] }
tonic-build = "0.12.3"
tokio = { version = "1.41.1", features = ["rt","rt-multi-thread","macros"] }
