[package]
name = "crm_metadata"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true}
prost = { workspace = true }
derive_builder = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
serde_yaml = { workspace = true }
rand = { workspace = true }
itertools = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
futures = { workspace = true }
sqlx-db-tester = { version = "0.5.0",optional = true }
tokio-stream = { workspace = true }
fake = { workspace = true }

[build-dependencies]
anyhow = { workspace = true}
prost-build = { workspace = true }
tonic-build = { workspace = true }
proto-builder-trait = { workspace = true }

[dev-dependencies]
fake = { workspace = true }
nanoid = { workspace = true }
user_stat = { workspace = true,features = ["test_utils"] }
