[package]
name = "crm_send"
version = "0.1.0"
edition = "2021"

[features]
default = []
test_utils = ["fake", "nanoid"]

[dependencies]
sqlx = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
serde_yaml = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-stream = { workspace = true }
uuid = { workspace = true }
fake = { workspace = true,optional = true}
nanoid = { workspace = true, optional = true }
crm_metadata = { workspace = true }
[build-dependencies]
anyhow = { workspace = true }
proto-builder-trait = { workspace = true }
tonic-build = { workspace = true }

[dev-dependencies]
crm_send = { workspace = true, features = ["test_utils"] }
