[package]
name = "user_stat"
version = "0.1.0"
edition = "2021"

[features]
default = []
test_utils = ["sqlx-db-tester"]

[dependencies]
anyhow = { workspace = true}
prost = { workspace = true }
derive_builder = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
serde_yaml = { workspace = true }
rand = { workspace = true }
itertools = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
futures = { workspace = true }
sqlx-db-tester = { version = "0.5.0",optional = true }
uuid = { version = "1.10.0", features = ["v4"] }
nanoid = { version = "0.4.0", optional = true }

[build-dependencies]
anyhow = { workspace = true}
prost-build = { workspace = true }
tonic-build = { workspace = true }
proto-builder-trait = "0.6.2"


[dev-dependencies]
fake = { version = "3.0.1",features = ["derive", "chrono"]}
nanoid = "0.4.0"
user_stat = { workspace = true,features = ["test_utils"] }
